--- a/main.css
+++ b/main.css
@@ -161,6 +161,15 @@ h3{
 	border:1px solid #021a40;
 
 }
+#image7{
+	position: absolute;
+	left:400px;
+	top:370px;
+	width: 600px;
+	height: 50px;
+	border:1px solid #021a40;
+
+}
 #link2{
 	position: absolute;
 	left:700px;
